--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body{
 	background-color: DarkSlateGray;
+	background-image: url("img/background1.svg");
 	font-family: Roboto, Arial, sans-sherif;
 	width: 100%;
 	height: 100%;
@@ -15,19 +16,25 @@ form{
 	position: absolute;
 	top: 50%;
 	width: 100%;
-	font-size: 35px;
+	font-size: 25px;
 	text-align: center;
 	z-index: 1;
 }
 input {
 	background-color: DarkSlateGray;
 	color: white;
-	font-size: 40px;
-	width: 50px;
+	font-size: 35px;
+	width: 60px;
 	height: 50px;
 	border: none;
 	text-align: center;
 }
+
+a {
+	outline: 0;
+}
+
+h1{ text-shadow: 3px 3px DarkSlateGray; }
 
 #countdown {
 	position: relative;
@@ -39,16 +46,13 @@ input {
 	vertical-align: middle;
 }
 
-#countdown-number, #button-text {
+#button-text {
 	position: absolute;
 	width: 100%;
 	text-align: center;
 	color: white;
 	z-index: 1;
 	pointer-events: none;
-}
-
-#button-text{
 	font-size: 30px;
 	top: 65%;
 }
@@ -63,9 +67,16 @@ input {
 
 #reset{
 	position: absolute;
-	display: none;
-	top:95%;
+	background-color: DarkSlateGray;
+	color: white;
+	font-size: 20px;
+	width: 100px;
+	border: 2px solid white;
+	border-radius: 5px;
+	padding: 5px;
+	top:92%;
 	left:45%;
+	display: none;
 }
 
 /* ----- SVG ----- */
